Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumObjIntObj.quorum
class Main
    action Main
        Number v
        v:SetValue(Test())
    end

    action Test() returns Number
        Integer var
        var:SetValue(5)
        return var
    end
end